exports[`Timeline component should be rendered correctly with params if params from router provided 1`] = `
<div>
  <_translate
    viewName="photos" />
  <Connect(_translate)
    fetchPhotoLists={[Function]}
    refetch={false} />
</div>
`;

exports[`Timeline component should be rendered correctly without store 1`] = `
<div>
  <_translate
    viewName="photos" />
  <Connect(_translate)
    fetchPhotoLists={[Function]}
    refetch={false} />
</div>
`;

exports[`Timeline component should have correct connected provided props 1`] = `
<_translate
  isFirstFetch={true}
  onFetchPhotoLists={[Function]}
  photos={Array []}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  } />
`;

exports[`Timeline component should render correctly if it has correct connected provided props 1`] = `
<Timeline
  f={undefined}
  isFirstFetch={true}
  onFetchPhotoLists={[Function]}
  photos={Array []}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  t={undefined} />
`;
